# gbrainy

./: .gitlab-ci.yml  ChangeLog  Makefile.am  README.md  SAMPLE  autogen.sh  configure.ac  meson.build  meson_options.txt  meson_post_install.py
data/: Makefile.am  gbrainy.appdata.xml.in  meson.build
help/: LINGUAS  meson.build
po/: Makevars  POTFILES.in  es.po  ru.po
src/: meson.build
src/Clients/Classical/: meson.build
src/Core/: meson.build
src/Games/: meson.build
tests/: Makefile.am  meson.build
tests/TestSupport/: UnitTestSupport.cs
tools/: meson.build
