sources = [
  'customgame.page',
  'difficulty.page',
  'export.page',
  'gameplay.page',
  'gametypes.page',
  'history.page',
  'index.page',
  'license.page',
  'multiplayer.page',
  'newgame.page',
  'pause.page',
  'score.page',
  'times.page',
  'tips.page',
]

media = [
  'figures/all-games.png',
  'figures/logic-games.png',
  'figures/memory-games.png',
  'figures/gbrainy.png',
  'figures/math-games.png',
  'figures/verbal-games.png',
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
)
