sources = files(
  'Calculation/CalculationArithmetical.cs',
  'Calculation/CalculationAverage.cs',
  'Calculation/CalculationCloserFraction.cs',
  'Calculation/CalculationConsecutiveSum.cs',
  'Calculation/CalculationFractions.cs',
  'Calculation/CalculationGreatestDivisor.cs',
  'Calculation/CalculationOperator.cs',
  'Calculation/CalculationPrimes.cs',
  'Calculation/CalculationProportions.cs',
  'Calculation/CalculationRatio.cs',
  'Calculation/CalculationSelectedNumbers.cs',
  'Calculation/CalculationTwoNumbers.cs',
  'GameList.cs',
  'Logic/Puzzle3DCube.cs',
  'Logic/PuzzleBalance.cs',
  'Logic/PuzzleBuildTriangle.cs',
  'Logic/PuzzleCirclesSquare.cs',
  'Logic/PuzzleClocks.cs',
  'Logic/PuzzleCountCircles.cs',
  'Logic/PuzzleCounting.cs',
  'Logic/PuzzleCountSeries.cs',
  'Logic/PuzzleCoverPercentage.cs',
  'Logic/PuzzleCube.cs',
  'Logic/PuzzleDice.cs',
  'Logic/PuzzleDivideCircle.cs',
  'Logic/PuzzleEquation.cs',
  'Logic/PuzzleExtraCircle.cs',
  'Logic/PuzzleFigureLetter.cs',
  'Logic/PuzzleFigurePattern.cs',
  'Logic/PuzzleFigures.cs',
  'Logic/PuzzleFindTheNumber.cs',
  'Logic/PuzzleFourSided.cs',
  'Logic/PuzzleGridDots.cs',
  'Logic/PuzzleHandshakes.cs',
  'Logic/PuzzleLargerShape.cs',
  'Logic/PuzzleLargestArea.cs',
  'Logic/PuzzleLargestDiameter.cs',
  'Logic/PuzzleLines.cs',
  'Logic/PuzzleGridCircles.cs',
  'Logic/PuzzleGridNumbers.cs',
  'Logic/PuzzleMissingPiece.cs',
  'Logic/PuzzleMissingSlice.cs',
  'Logic/PuzzleMostInCommon.cs',
  'Logic/PuzzleMoveFigure.cs',
  'Logic/PuzzleNextFigure.cs',
  'Logic/PuzzleNumericRelation.cs',
  'Logic/PuzzleNumericSequence.cs',
  'Logic/PuzzleOstracism.cs',
  'Logic/PuzzlePencil.cs',
  'Logic/PuzzlePeopleTable.cs',
  'Logic/PuzzlePercentage.cs',
  'Logic/PuzzlePredicateLogic.cs',
  'Logic/PuzzleQuadrilaterals.cs',
  'Logic/PuzzleRelatedNumbers.cs',
  'Logic/PuzzleSquaresAndLetters.cs',
  'Logic/PuzzleSquares.cs',
  'Logic/PuzzleSquareSheets.cs',
  'Logic/PuzzleTetris.cs',
  'Logic/PuzzleTimeNow.cs',
  'Logic/PuzzleTrains.cs',
  'Logic/PuzzleTriangles.cs',
  'Logic/PuzzleTrianglesWithNumbers.cs',
  'Memory/MemoryColouredFigures.cs',
  'Memory/MemoryColouredText.cs',
  'Memory/MemoryCountDots.cs',
  'Memory/MemoryFaces.cs',
  'Memory/MemoryFacts.cs',
  'Memory/MemoryFiguresAndText.cs',
  'Memory/MemoryFiguresNumbers.cs',
  'Memory/MemoryIndications.cs',
  'Memory/MemoryNumbers.cs',
  'Memory/MemoryWords.cs',
)

sources += configure_file(
  input: 'AssemblyInfo.cs.in',
  output: '@BASENAME@',
  configuration: defines_conf,
)

cs_flags = []

# FIXME: this should done with resx file and resources parameter
resource_data = [
  data_dir / 'game-graphics/balance.svg',
  data_dir / 'game-graphics/bucket.svg',
  data_dir / 'game-graphics/dice.svg',
  data_dir / 'game-graphics/faceboy1.svg',
  data_dir / 'game-graphics/faceboy2.svg',
  data_dir / 'game-graphics/faceboy3.svg',
  data_dir / 'game-graphics/facegirl1.svg',
  data_dir / 'game-graphics/facegirl2.svg',
  data_dir / 'game-graphics/facegirl3.svg',
  data_dir / 'game-graphics/handshake.svg',
  data_dir / 'game-graphics/people_table.svg',
  data_dir / 'game-graphics/present.svg',
  data_dir / 'game-graphics/train_left.svg',
  data_dir / 'game-graphics/train_right.svg',
  data_dir / 'game-graphics/tv_set.svg',
  data_dir / 'game-graphics/shop.svg',
]

foreach resource: resource_data
  cs_flags += ['-resource:' + resource]
endforeach

libgbrainy_games = shared_library(
  meson.project_name() + '.Games',
  sources: sources,
  dependencies: libgbrainy_core_dep,
  cs_args: cs_flags,
  install: true,
  install_dir: gbrainy_pkglibdir,
)

libgbrainy_games_dep = declare_dependency(
  dependencies: libgbrainy_core_dep,
  link_with: libgbrainy_games,
)
